// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|Header Header action buttons with dropdowns 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <header
      aria-label="main header"
      className="bx--header custom-class-name Headerstory__StyledHeader-st8jpc-0 hBPBX"
      role="banner"
    >
      <a
        className="bx--skip-to-content"
        href="#main-content"
        tabIndex="0"
      >
        Skip to main content
      </a>
      <button
        aria-label="Open menu"
        className="bx--header__action bx--header__menu-trigger bx--header__menu-toggle bx--header__menu-toggle__hidden"
        onClick={null}
        title="Open menu"
        type="button"
      >
        <svg
          aria-hidden={true}
          focusable="false"
          height={20}
          preserveAspectRatio="xMidYMid meet"
          style={
            Object {
              "willChange": "transform",
            }
          }
          viewBox="0 0 20 20"
          width={20}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2 14.8h16V16H2zm0-3.6h16v1.2H2zm0-3.6h16v1.2H2zM2 4h16v1.2H2z"
          />
        </svg>
      </button>
      <a
        className="bx--header__name"
        href="http://localhost:8989"
      >
        <span
          className="bx--header__name--prefix"
        >
          IBM
        </span>
         
        Watson IoT Platform 
      </a>
      <div
        className="bx--header__global"
      >
        <button
          aria-label="alerts"
          className="bx--header-action-btn bx--header__action"
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden={true}
            description="Icon"
            fill="white"
            focusable="false"
            height={20}
            preserveAspectRatio="xMidYMid meet"
            style={
              Object {
                "willChange": "transform",
              }
            }
            viewBox="0 0 32 32"
            width={20}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M28.7 20.3L26 17.6V13a10.07 10.07 0 0 0-9-10V1h-2v2a10.15 10.15 0 0 0-9 10v4.6l-2.7 2.7a.91.91 0 0 0-.3.7v3a.94.94 0 0 0 1 1h7a5 5 0 0 0 10 0h7a.94.94 0 0 0 1-1v-3a.91.91 0 0 0-.3-.7zM16 28a3 3 0 0 1-3-3h6a3 3 0 0 1-3 3zm11-5H5v-1.6l2.7-2.7A.91.91 0 0 0 8 18v-5a8 8 0 0 1 16 0v5a.91.91 0 0 0 .3.7l2.7 2.7z"
            />
          </svg>
        </button>
        <div
          className="bx--header__submenu bx--header-action-btn"
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
        >
           
          <a
            aria-expanded={false}
            aria-haspopup="menu"
            aria-label="help"
            className="bx--header__menu-item bx--header__menu-title"
            href="javascript:void(0)"
            onKeyDown={[Function]}
            role="menuitem"
            tabIndex={0}
          >
            <svg
              aria-hidden={true}
              className="bx--header__menu-item bx--header__menu-title"
              description="Icon"
              fill="white"
              focusable="false"
              height={20}
              preserveAspectRatio="xMidYMid meet"
              style={
                Object {
                  "willChange": "transform",
                }
              }
              viewBox="0 0 32 32"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 2a14 14 0 1 0 14 14A14 14 0 0 0 16 2zm0 26a12 12 0 1 1 12-12 12 12 0 0 1-12 12z"
              />
              <circle
                cx="16"
                cy="23.5"
                r="1.5"
              />
              <path
                d="M17 8h-1.5a4.49 4.49 0 0 0-4.5 4.5v.5h2v-.5a2.5 2.5 0 0 1 2.5-2.5H17a2.5 2.5 0 0 1 0 5h-2v4.5h2V17a4.5 4.5 0 0 0 0-9z"
              />
            </svg>
          </a>
          <ul
            aria-label="help"
            className="bx--header__menu"
            role="menu"
          >
            <li
              role="none"
            >
              <a
                className="bx--header__menu-item"
                href="http://google.com"
                rel="noopener noreferrer"
                role="menuitem"
                tabIndex={0}
                target="_blank"
                title="this is a title"
              >
                <span
                  className="bx--text-truncate--end"
                >
                  this is my message to you
                </span>
              </a>
            </li>
            <li
              className="this"
              role="none"
            >
              <button
                className="bx--header__menu-item"
                onClick={[Function]}
                role="menuitem"
                tabIndex={0}
              >
                <span
                  className="bx--text-truncate--end"
                >
                  <span>
                    JohnDoe@ibm.com
                    <svg
                      aria-hidden={true}
                      description="Icon"
                      fill="white"
                      focusable="false"
                      height={20}
                      preserveAspectRatio="xMidYMid meet"
                      style={
                        Object {
                          "willChange": "transform",
                        }
                      }
                      viewBox="0 0 32 32"
                      width={20}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M16 2a14 14 0 1 0 14 14A14 14 0 0 0 16 2zm-6 24.38v-2A3.22 3.22 0 0 1 13 21h6a3.22 3.22 0 0 1 3 3.39v2a11.92 11.92 0 0 1-12 0zm14-1.46v-.61A5.21 5.21 0 0 0 19 19h-6a5.2 5.2 0 0 0-5 5.31v.59a12 12 0 1 1 16 0z"
                      />
                      <path
                        d="M16 7a5 5 0 1 0 5 5 5 5 0 0 0-5-5zm0 8a3 3 0 1 1 3-3 3 3 0 0 1-3 3z"
                      />
                    </svg>
                  </span>
                </span>
              </button>
            </li>
          </ul>
           
        </div>
        <div
          className="bx--header__submenu bx--header-action-btn"
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
        >
           
          <a
            aria-expanded={false}
            aria-haspopup="menu"
            aria-label="user"
            className="bx--header__menu-item bx--header__menu-title"
            href="javascript:void(0)"
            onKeyDown={[Function]}
            role="menuitem"
            tabIndex={0}
          >
            <svg
              aria-hidden={true}
              description="Icon"
              fill="white"
              focusable="false"
              height={20}
              preserveAspectRatio="xMidYMid meet"
              style={
                Object {
                  "willChange": "transform",
                }
              }
              viewBox="0 0 32 32"
              width={20}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M16 2a14 14 0 1 0 14 14A14 14 0 0 0 16 2zm-6 24.38v-2A3.22 3.22 0 0 1 13 21h6a3.22 3.22 0 0 1 3 3.39v2a11.92 11.92 0 0 1-12 0zm14-1.46v-.61A5.21 5.21 0 0 0 19 19h-6a5.2 5.2 0 0 0-5 5.31v.59a12 12 0 1 1 16 0z"
              />
              <path
                d="M16 7a5 5 0 1 0 5 5 5 5 0 0 0-5-5zm0 8a3 3 0 1 1 3-3 3 3 0 0 1-3 3z"
              />
            </svg>
          </a>
          <ul
            aria-label="user"
            className="bx--header__menu"
            role="menu"
          >
            <li
              role="none"
            >
              <a
                className="bx--header__menu-item"
                href="http://google.com"
                rel="noopener noreferrer"
                role="menuitem"
                tabIndex={0}
                target="_blank"
                title="this is a title"
              >
                <span
                  className="bx--text-truncate--end"
                >
                  this is my message to you
                </span>
              </a>
            </li>
            <li
              className="this"
              role="none"
            >
              <button
                className="bx--header__menu-item"
                onClick={[Function]}
                role="menuitem"
                tabIndex={0}
              >
                <span
                  className="bx--text-truncate--end"
                >
                  JohnDoe@ibm.com
                  <svg
                    aria-hidden={true}
                    description="Icon"
                    fill="white"
                    focusable="false"
                    height={20}
                    preserveAspectRatio="xMidYMid meet"
                    style={
                      Object {
                        "willChange": "transform",
                      }
                    }
                    viewBox="0 0 32 32"
                    width={20}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16 2a14 14 0 1 0 14 14A14 14 0 0 0 16 2zm-6 24.38v-2A3.22 3.22 0 0 1 13 21h6a3.22 3.22 0 0 1 3 3.39v2a11.92 11.92 0 0 1-12 0zm14-1.46v-.61A5.21 5.21 0 0 0 19 19h-6a5.2 5.2 0 0 0-5 5.31v.59a12 12 0 1 1 16 0z"
                    />
                    <path
                      d="M16 7a5 5 0 1 0 5 5 5 5 0 0 0-5-5zm0 8a3 3 0 1 1 3-3 3 3 0 0 1-3 3z"
                    />
                  </svg>
                </span>
              </button>
            </li>
          </ul>
           
        </div>
        <button
          aria-label="header-panel-trigger"
          className="bx--header__action"
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden={true}
            description="Icon"
            fill="white"
            focusable="false"
            height={20}
            preserveAspectRatio="xMidYMid meet"
            style={
              Object {
                "willChange": "transform",
              }
            }
            viewBox="0 0 20 20"
            width={20}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.5 15.5H18V18h-2.5zm-6.75 0h2.5V18h-2.5zM2 15.5h2.5V18H2zm13.5-6.75H18v2.5h-2.5zm-6.75 0h2.5v2.5h-2.5zM2 8.75h2.5v2.5H2zM15.5 2H18v2.5h-2.5zM8.75 2h2.5v2.5h-2.5zM2 2h2.5v2.5H2z"
            />
          </svg>
        </button>
      </div>
      <div
        aria-label="Header Panel"
        className="bx--header-panel header-panel"
      >
        <div>
          <a
            href="#"
          >
            Header panel content
          </a>
        </div>
      </div>
    </header>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT|Header Header no submenu 1`] = `
<div
  className="storybook-container"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "column",
      "padding": "3rem",
    }
  }
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <header
      aria-label="main header"
      className="bx--header custom-class-name Headerstory__StyledHeader-st8jpc-0 hBPBX"
      role="banner"
    >
      <a
        className="bx--skip-to-content"
        href="#main-content"
        tabIndex="0"
      >
        Skip to main content
      </a>
      <button
        aria-label="Open menu"
        className="bx--header__action bx--header__menu-trigger bx--header__menu-toggle bx--header__menu-toggle__hidden"
        onClick={null}
        title="Open menu"
        type="button"
      >
        <svg
          aria-hidden={true}
          focusable="false"
          height={20}
          preserveAspectRatio="xMidYMid meet"
          style={
            Object {
              "willChange": "transform",
            }
          }
          viewBox="0 0 20 20"
          width={20}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2 14.8h16V16H2zm0-3.6h16v1.2H2zm0-3.6h16v1.2H2zM2 4h16v1.2H2z"
          />
        </svg>
      </button>
      <a
        className="bx--header__name"
        href="http://localhost:8989"
      >
        <span
          className="bx--header__name--prefix"
        >
          IBM
        </span>
         
        Watson IoT Platform 
      </a>
      <div
        className="bx--header__global"
      >
        <button
          aria-label="user"
          className="bx--header-action-btn bx--header__action"
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden={true}
            description="Icon"
            fill="white"
            focusable="false"
            height={20}
            preserveAspectRatio="xMidYMid meet"
            style={
              Object {
                "willChange": "transform",
              }
            }
            viewBox="0 0 32 32"
            width={20}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M16 2a14 14 0 1 0 14 14A14 14 0 0 0 16 2zm-6 24.38v-2A3.22 3.22 0 0 1 13 21h6a3.22 3.22 0 0 1 3 3.39v2a11.92 11.92 0 0 1-12 0zm14-1.46v-.61A5.21 5.21 0 0 0 19 19h-6a5.2 5.2 0 0 0-5 5.31v.59a12 12 0 1 1 16 0z"
            />
            <path
              d="M16 7a5 5 0 1 0 5 5 5 5 0 0 0-5-5zm0 8a3 3 0 1 1 3-3 3 3 0 0 1-3 3z"
            />
          </svg>
        </button>
      </div>
    </header>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
